cmake_minimum_required(VERSION 3.12.2 FATAL_ERROR)

project( rimg)

set(WITH_RLIB TRUE)
set(WITH_OPENCV TRUE)
include( "cmake/FindLibs.cmake")

set( INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
set( INCLUDE_F "${INCLUDE_DIR}/${PROJECT_NAME}")
set( SRC_DIR "${PROJECT_SOURCE_DIR}/src")
include_directories( ${INCLUDE_DIR})
include_directories( ${INCLUDE_F})

set( INCLUDE_FILES
    "${INCLUDE_F}.h"
    #"${INCLUDE_F}/AdaptiveDepthMinFilter.h"
    "${INCLUDE_F}/AdaptiveDepthPatchScanner.h"
    "${INCLUDE_F}/AdaptiveDepthSegmenter.h"
    "${INCLUDE_F}/AdaptiveDepthStructureFilter.h"
    "${INCLUDE_F}/BatchFeatureExtractor.h"
    "${INCLUDE_F}/CannyOperator.h"
    "${INCLUDE_F}/CircleDiff.h"
    "${INCLUDE_F}/CircleDiffExtractor.h"
    "${INCLUDE_F}/ColourDetector.h"
    "${INCLUDE_F}/ConnectedComponents.h"
    "${INCLUDE_F}/ContentFinder.h"
    #"${INCLUDE_F}/DataLoader.h"
    #"${INCLUDE_F}/DataTools.h"
    "${INCLUDE_F}/DescriptorJoiner.h"
    "${INCLUDE_F}/DescriptorStatistics.h"
    "${INCLUDE_F}/DepthDiff.h"
    "${INCLUDE_F}/DepthDiffExtractor.h"
    "${INCLUDE_F}/DepthFinder.h"
    "${INCLUDE_F}/DepthSegmenter.h"
    "${INCLUDE_F}/DistanceTransform.h"
    "${INCLUDE_F}/EDTFeature.h"
    "${INCLUDE_F}/EDTFeatureExtractor.h"
    "${INCLUDE_F}/Equi2Rect.h"
    "${INCLUDE_F}/FastHOG.h"
    "${INCLUDE_F}/FastHOGExtractor.h"
    "${INCLUDE_F}/Fish2Rect.h"
    #"${INCLUDE_F}/FastKeypoints.h"
    "${INCLUDE_F}/FeatureExceptions.h"
    "${INCLUDE_F}/FeatureExtractor.h"
    "${INCLUDE_F}/FeatureLibrary.h"
    "${INCLUDE_F}/FeatureOperator.h"
    #"${INCLUDE_F}/FeaturePreProcessor.h"
    "${INCLUDE_F}/FeatureUtils.h"
    #"${INCLUDE_F}/GallLempitskyFeature.h"
    #"${INCLUDE_F}/GallLempitskyFeatureExtractor.h"
    "${INCLUDE_F}/GrabCutsOperator.h"
    "${INCLUDE_F}/GradientsBuilder.h"
    "${INCLUDE_F}/GradientExtractor.h"
    #"${INCLUDE_F}/GroundTruthRecords.h"
    "${INCLUDE_F}/HaarCascadeDetector.h"
    #"${INCLUDE_F}/HarrisKeypoints.h"
    #"${INCLUDE_F}/HeightDepthImager.h"
    "${INCLUDE_F}/Histogram.h"
    "${INCLUDE_F}/Histogram1D.h"
    "${INCLUDE_F}/HOGExtractor.h"
    "${INCLUDE_F}/HoughCirclesOperator.h"
    "${INCLUDE_F}/HoughLinesOperator.h"
    #"${INCLUDE_F}/ImageBuilder.h"
    #"${INCLUDE_F}/ImageComparator.h"
    "${INCLUDE_F}/ImageHistogram.h"
    "${INCLUDE_F}/ImageLabeller.h"
    #"${INCLUDE_F}/ImageModifier.h"  # Requires OpenCV nonfree library
    "${INCLUDE_F}/ImageProcess.h"
    "${INCLUDE_F}/ImagePyramid.h"
    "${INCLUDE_F}/ImageType.h"
    "${INCLUDE_F}/ImageTypeEnum.h"
    "${INCLUDE_F}/IntensityIndexer.h"
    #"${INCLUDE_F}/JpegDecompressor.h"
    "${INCLUDE_F}/KeypointsConverter.h"
    "${INCLUDE_F}/KeypointsDetector.h"
    "${INCLUDE_F}/LaplacianZC.h"
    "${INCLUDE_F}/LinesConverter.h"
    "${INCLUDE_F}/LinesFilter.h"
    "${INCLUDE_F}/LocalBinaryPattern.h"
    "${INCLUDE_F}/LocalBinaryPatternExtractor.h"
    #"${INCLUDE_F}/MserKeypoints.h"
    "${INCLUDE_F}/NFoldCalculator.h"
    "${INCLUDE_F}/OffsetPatchScanner.h"
    #"${INCLUDE_F}/Panorama.h"
    "${INCLUDE_F}/PatchDescriptor.h"
    "${INCLUDE_F}/PatchDescriptorExtractor.h"
    #"${INCLUDE_F}/PointCloud.h"
    #"${INCLUDE_F}/PointCloud_impl.h"
    #"${INCLUDE_F}/PointCloudBuilder.h"
    #"${INCLUDE_F}/PointCloudOrienter.h"
    #"${INCLUDE_F}/PointCloudReader.h"
    #"${INCLUDE_F}/PointCloudTextReader.h"
    #"${INCLUDE_F}/PointCloudWriter.h"
    #"${INCLUDE_F}/PointCloudTextWriter.h"
    #"${INCLUDE_F}/PointDataBuilder.h"
    #"${INCLUDE_F}/PointDataReader.h"
    #"${INCLUDE_F}/PointDataWriter.h"
    #"${INCLUDE_F}/PointCloudTools.h"
    "${INCLUDE_F}/ProHOG.h"
    "${INCLUDE_F}/ProHOGExtractor.h"
    "${INCLUDE_F}/ProHOGTools.h"
    #"${INCLUDE_F}/ProHOGFeatureExtractor.h"
    #"${INCLUDE_F}/RangeImager.h"
    #"${INCLUDE_F}/RangeMapAdjuster.h"
    "${INCLUDE_F}/RangePatchScanner.h"
    "${INCLUDE_F}/RectangleManager.h"
    "${INCLUDE_F}/RectCluster.h"
    "${INCLUDE_F}/RegionSorter.h"
    #"${INCLUDE_F}/SLIC.h"
    "${INCLUDE_F}/SobelEdges.h"
    "${INCLUDE_F}/SobelEdgesExtractor.h"
    "${INCLUDE_F}/SobelMaker.h"
    #"${INCLUDE_F}/StarKeypoints.h"
    #"${INCLUDE_F}/Superpixels.h"
    "${INCLUDE_F}/VectorDistribution.h"
    #"${INCLUDE_F}/VectorFloatKeyHashing.h"
    #"${INCLUDE_F}/VertexBoundaries.h"
    #"${INCLUDE_F}/View.h"
    #"${INCLUDE_F}/ViewExtract.h"
    #"${INCLUDE_F}/ViewFileReader.h"
    #"${INCLUDE_F}/ViewFileWriter.h"
    #"${INCLUDE_F}/ViewReader.h"
    #"${INCLUDE_F}/ViewReceiver.h"
    #"${INCLUDE_F}/ViewSampleExtractor.h"
    #"${INCLUDE_F}/ViewWriter.h"
    "${INCLUDE_F}/WatershedOperator.h"
    )

set( SRC_FILES
    #${SRC_DIR}/AdaptiveDepthMinFilter
    ${SRC_DIR}/AdaptiveDepthPatchScanner
    ${SRC_DIR}/AdaptiveDepthSegmenter
    ${SRC_DIR}/AdaptiveDepthStructureFilter
    ${SRC_DIR}/BatchFeatureExtractor
    ${SRC_DIR}/CannyOperator
    ${SRC_DIR}/CircleDiff
    ${SRC_DIR}/CircleDiffExtractor
    ${SRC_DIR}/ColourDetector
    ${SRC_DIR}/ConnectedComponents
    ${SRC_DIR}/ContentFinder
    #${SRC_DIR}/DataLoader
    #${SRC_DIR}/DataTools
    ${SRC_DIR}/DescriptorJoiner
    ${SRC_DIR}/DescriptorStatistics
    ${SRC_DIR}/DepthDiff
    ${SRC_DIR}/DepthDiffExtractor
    ${SRC_DIR}/DepthFinder
    ${SRC_DIR}/DepthSegmenter
    ${SRC_DIR}/DistanceTransform
    ${SRC_DIR}/EDTFeature
    ${SRC_DIR}/EDTFeatureExtractor
    ${SRC_DIR}/Equi2Rect
    ${SRC_DIR}/FastHOG
    ${SRC_DIR}/FastHOGExtractor
    ${SRC_DIR}/Fish2Rect
    #${SRC_DIR}/FastKeypoints
    ${SRC_DIR}/FeatureExceptions
    ${SRC_DIR}/FeatureExtractor
    ${SRC_DIR}/FeatureLibrary
    ${SRC_DIR}/FeatureOperator
    #${SRC_DIR}/FeaturePreProcessor
    ${SRC_DIR}/FeatureUtils
    #${SRC_DIR}/GallLempitskyFeature
    #${SRC_DIR}/GallLempitskyFeatureExtractor
    ${SRC_DIR}/GrabCutsOperator
    ${SRC_DIR}/GradientsBuilder
    ${SRC_DIR}/GradientExtractor
    #${SRC_DIR}/GroundTruthRecords
    ${SRC_DIR}/HaarCascadeDetector
    #${SRC_DIR}/HarrisKeypoints
    #${SRC_DIR}/HeightDepthImager
    ${SRC_DIR}/Histogram
    ${SRC_DIR}/Histogram1D
    #${SRC_DIR}/HoG
    ${SRC_DIR}/HOGExtractor
    ${SRC_DIR}/HoughCirclesOperator
    ${SRC_DIR}/HoughLinesOperator
    #${SRC_DIR}/ImageBuilder
    #${SRC_DIR}/ImageComparator
    ${SRC_DIR}/ImageHistogram
    ${SRC_DIR}/ImageLabeller
    #${SRC_DIR}/ImageModifier   # Requires OpenCV nonfree library
    ${SRC_DIR}/ImageProcess
    ${SRC_DIR}/ImagePyramid
    ${SRC_DIR}/ImageType
    ${SRC_DIR}/IntensityIndexer
    #${SRC_DIR}/JpegDecompressor
    ${SRC_DIR}/KeypointsConverter
    ${SRC_DIR}/KeypointsDetector
    ${SRC_DIR}/LaplacianZC
    ${SRC_DIR}/LinesConverter
    ${SRC_DIR}/LinesFilter
    ${SRC_DIR}/LocalBinaryPattern
    ${SRC_DIR}/LocalBinaryPatternExtractor
    #${SRC_DIR}/MserKeypoints
    ${SRC_DIR}/NFoldCalculator
    ${SRC_DIR}/OffsetPatchScanner
    #${SRC_DIR}/Panorama
    ${SRC_DIR}/PatchDescriptor
    ${SRC_DIR}/PatchDescriptorExtractor
    #${SRC_DIR}/PointCloud
    #${SRC_DIR}/PointCloud_impl
    #${SRC_DIR}/PointCloudBuilder
    #${SRC_DIR}/PointCloudOrienter
    #${SRC_DIR}/PointCloudReader
    #${SRC_DIR}/PointCloudTextReader
    #${SRC_DIR}/PointCloudWriter
    #${SRC_DIR}/PointCloudTextWriter
    #${SRC_DIR}/PointDataReader
    #${SRC_DIR}/PointDataWriter
    #${SRC_DIR}/PointCloudTools
    ${SRC_DIR}/ProHOG
    ${SRC_DIR}/ProHOGExtractor
    ${SRC_DIR}/ProHOGTools
    #${SRC_DIR}/ProHOGFeatureExtractor
    #${SRC_DIR}/RangeImager
    #${SRC_DIR}/RangeMapAdjuster
    ${SRC_DIR}/RangePatchScanner
    ${SRC_DIR}/RectangleManager
    ${SRC_DIR}/RectCluster
    ${SRC_DIR}/RegionSorter
    #${SRC_DIR}/SLIC
    ${SRC_DIR}/SobelEdges
    ${SRC_DIR}/SobelEdgesExtractor
    ${SRC_DIR}/SobelMaker
    #${SRC_DIR}/StarKeypoints
    #${SRC_DIR}/Superpixels
    ${SRC_DIR}/VectorDistribution
    #${SRC_DIR}/VectorFloatKeyHashing
    #${SRC_DIR}/VertexBoundaries
    #${SRC_DIR}/View
    #${SRC_DIR}/ViewExtract
    #${SRC_DIR}/ViewFileReader
    #${SRC_DIR}/ViewFileWriter
    #${SRC_DIR}/ViewReader
    #${SRC_DIR}/ViewReceiver
    #${SRC_DIR}/ViewSampleExtractor
    #${SRC_DIR}/ViewWriter
    ${SRC_DIR}/WatershedOperator
    )

add_library( ${PROJECT_NAME} ${SRC_FILES} ${INCLUDE_FILES})
include( "cmake/LinkLibs.cmake")
