cmake_minimum_required(VERSION 3.12.2 FATAL_ERROR)

project( rimg)

set(WITH_RLIB TRUE)
set(WITH_OPENCV TRUE)
include( "cmake/FindLibs.cmake")

set( INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
set( INCLUDE_F "${INCLUDE_DIR}/${PROJECT_NAME}")
set( SRC_DIR "${PROJECT_SOURCE_DIR}/src")
include_directories( ${INCLUDE_DIR})
include_directories( ${INCLUDE_F})

set( INCLUDE_FILES
    "${INCLUDE_F}.h"
    #"${INCLUDE_F}/AdaptiveDepthMinFilter.h"
    "${INCLUDE_F}/AdaptiveDepthPatchScanner.h"
    "${INCLUDE_F}/AdaptiveDepthSegmenter.h"
    "${INCLUDE_F}/AdaptiveDepthStructureFilter.h"
    "${INCLUDE_F}/BatchFeatureExtractor.h"
    "${INCLUDE_F}/CannyOperator.h"
    "${INCLUDE_F}/CircleDiff.h"
    "${INCLUDE_F}/CircleDiffExtractor.h"
    "${INCLUDE_F}/Colour.h"
    "${INCLUDE_F}/ColourDetector.h"
    "${INCLUDE_F}/ConnectedComponents.h"
    "${INCLUDE_F}/ContentFinder.h"
    #"${INCLUDE_F}/DataLoader.h"
    #"${INCLUDE_F}/DataTools.h"
    "${INCLUDE_F}/DescriptorJoiner.h"
    "${INCLUDE_F}/DescriptorStatistics.h"
    "${INCLUDE_F}/DepthDiff.h"
    "${INCLUDE_F}/DepthDiffExtractor.h"
    "${INCLUDE_F}/DepthFinder.h"
    "${INCLUDE_F}/DepthSegmenter.h"
    "${INCLUDE_F}/DistanceTransform.h"
    "${INCLUDE_F}/EDTFeature.h"
    "${INCLUDE_F}/EDTFeatureExtractor.h"
    "${INCLUDE_F}/Equi2Rect.h"
    "${INCLUDE_F}/FastHOG.h"
    "${INCLUDE_F}/FastHOGExtractor.h"
    "${INCLUDE_F}/Fish2Rect.h"
    #"${INCLUDE_F}/FastKeypoints.h"
    "${INCLUDE_F}/FeatureExceptions.h"
    "${INCLUDE_F}/FeatureExtractor.h"
    "${INCLUDE_F}/FeatureLibrary.h"
    "${INCLUDE_F}/FeatureOperator.h"
    #"${INCLUDE_F}/FeaturePreProcessor.h"
    "${INCLUDE_F}/FeatureUtils.h"
    #"${INCLUDE_F}/GallLempitskyFeature.h"
    #"${INCLUDE_F}/GallLempitskyFeatureExtractor.h"
    "${INCLUDE_F}/GrabCutsOperator.h"
    "${INCLUDE_F}/GradientsBuilder.h"
    "${INCLUDE_F}/GradientExtractor.h"
    #"${INCLUDE_F}/GroundTruthRecords.h"
    "${INCLUDE_F}/HaarCascadeDetector.h"
    #"${INCLUDE_F}/HarrisKeypoints.h"
    #"${INCLUDE_F}/HeightDepthImager.h"
    "${INCLUDE_F}/Histogram.h"
    "${INCLUDE_F}/Histogram1D.h"
    "${INCLUDE_F}/HOGExtractor.h"
    "${INCLUDE_F}/HoughCirclesOperator.h"
    "${INCLUDE_F}/HoughLinesOperator.h"
    #"${INCLUDE_F}/ImageBuilder.h"
    #"${INCLUDE_F}/ImageComparator.h"
    "${INCLUDE_F}/ImageHistogram.h"
    "${INCLUDE_F}/ImageLabeller.h"
    #"${INCLUDE_F}/ImageModifier.h"  # Requires OpenCV nonfree library
    "${INCLUDE_F}/ImageProcess.h"
    "${INCLUDE_F}/ImagePyramid.h"
    "${INCLUDE_F}/ImageType.h"
    "${INCLUDE_F}/ImageTypeEnum.h"
    "${INCLUDE_F}/IntensityIndexer.h"
    #"${INCLUDE_F}/JpegDecompressor.h"
    "${INCLUDE_F}/KeypointsConverter.h"
    "${INCLUDE_F}/KeypointsDetector.h"
    "${INCLUDE_F}/LaplacianZC.h"
    "${INCLUDE_F}/LinesConverter.h"
    "${INCLUDE_F}/LinesFilter.h"
    "${INCLUDE_F}/LocalBinaryPattern.h"
    "${INCLUDE_F}/LocalBinaryPatternExtractor.h"
    #"${INCLUDE_F}/MserKeypoints.h"
    "${INCLUDE_F}/NFoldCalculator.h"
    "${INCLUDE_F}/OffsetPatchScanner.h"
    #"${INCLUDE_F}/Panorama.h"
    "${INCLUDE_F}/PatchDescriptor.h"
    "${INCLUDE_F}/PatchDescriptorExtractor.h"
    #"${INCLUDE_F}/PointCloud.h"
    #"${INCLUDE_F}/PointCloud_impl.h"
    #"${INCLUDE_F}/PointCloudBuilder.h"
    #"${INCLUDE_F}/PointCloudOrienter.h"
    #"${INCLUDE_F}/PointCloudReader.h"
    #"${INCLUDE_F}/PointCloudTextReader.h"
    #"${INCLUDE_F}/PointCloudWriter.h"
    #"${INCLUDE_F}/PointCloudTextWriter.h"
    #"${INCLUDE_F}/PointDataBuilder.h"
    #"${INCLUDE_F}/PointDataReader.h"
    #"${INCLUDE_F}/PointDataWriter.h"
    #"${INCLUDE_F}/PointCloudTools.h"
    "${INCLUDE_F}/ProHOG.h"
    "${INCLUDE_F}/ProHOGExtractor.h"
    "${INCLUDE_F}/ProHOGTools.h"
    #"${INCLUDE_F}/ProHOGFeatureExtractor.h"
    #"${INCLUDE_F}/RangeImager.h"
    #"${INCLUDE_F}/RangeMapAdjuster.h"
    "${INCLUDE_F}/RangePatchScanner.h"
    "${INCLUDE_F}/RectangleManager.h"
    "${INCLUDE_F}/RectCluster.h"
    "${INCLUDE_F}/RegionSorter.h"
    #"${INCLUDE_F}/SLIC.h"
    "${INCLUDE_F}/SobelEdges.h"
    "${INCLUDE_F}/SobelEdgesExtractor.h"
    "${INCLUDE_F}/SobelMaker.h"
    #"${INCLUDE_F}/StarKeypoints.h"
    #"${INCLUDE_F}/Superpixels.h"
    "${INCLUDE_F}/VectorDistribution.h"
    #"${INCLUDE_F}/VectorFloatKeyHashing.h"
    #"${INCLUDE_F}/VertexBoundaries.h"
    #"${INCLUDE_F}/View.h"
    #"${INCLUDE_F}/ViewExtract.h"
    #"${INCLUDE_F}/ViewFileReader.h"
    #"${INCLUDE_F}/ViewFileWriter.h"
    #"${INCLUDE_F}/ViewReader.h"
    #"${INCLUDE_F}/ViewReceiver.h"
    #"${INCLUDE_F}/ViewSampleExtractor.h"
    #"${INCLUDE_F}/ViewWriter.h"
    "${INCLUDE_F}/WatershedOperator.h"
    )

set( SRC_FILES
    #"${SRC_DIR}/AdaptiveDepthMinFilter.cpp"
    "${SRC_DIR}/AdaptiveDepthPatchScanner.cpp"
    "${SRC_DIR}/AdaptiveDepthSegmenter.cpp"
    "${SRC_DIR}/AdaptiveDepthStructureFilter.cpp"
    "${SRC_DIR}/BatchFeatureExtractor.cpp"
    "${SRC_DIR}/CannyOperator.cpp"
    "${SRC_DIR}/CircleDiff.cpp"
    "${SRC_DIR}/CircleDiffExtractor.cpp"
    "${SRC_DIR}/Colour.cpp"
    "${SRC_DIR}/ColourDetector.cpp"
    "${SRC_DIR}/ConnectedComponents.cpp"
    "${SRC_DIR}/ContentFinder.cpp"
    #"${SRC_DIR}/DataLoader.cpp"
    #"${SRC_DIR}/DataTools.cpp"
    "${SRC_DIR}/DescriptorJoiner.cpp"
    "${SRC_DIR}/DescriptorStatistics.cpp"
    "${SRC_DIR}/DepthDiff.cpp"
    "${SRC_DIR}/DepthDiffExtractor.cpp"
    "${SRC_DIR}/DepthFinder.cpp"
    "${SRC_DIR}/DepthSegmenter.cpp"
    "${SRC_DIR}/DistanceTransform.cpp"
    "${SRC_DIR}/EDTFeature.cpp"
    "${SRC_DIR}/EDTFeatureExtractor.cpp"
    "${SRC_DIR}/Equi2Rect.cpp"
    "${SRC_DIR}/FastHOG.cpp"
    "${SRC_DIR}/FastHOGExtractor.cpp"
    "${SRC_DIR}/Fish2Rect.cpp"
    #"${SRC_DIR}/FastKeypoints.cpp"
    "${SRC_DIR}/FeatureExceptions.cpp"
    "${SRC_DIR}/FeatureExtractor.cpp"
    "${SRC_DIR}/FeatureLibrary.cpp"
    "${SRC_DIR}/FeatureOperator.cpp"
    #"${SRC_DIR}/FeaturePreProcessor.cpp"
    "${SRC_DIR}/FeatureUtils.cpp"
    #"${SRC_DIR}/GallLempitskyFeature.cpp"
    #"${SRC_DIR}/GallLempitskyFeatureExtractor.cpp"
    "${SRC_DIR}/GrabCutsOperator.cpp"
    "${SRC_DIR}/GradientsBuilder.cpp"
    "${SRC_DIR}/GradientExtractor.cpp"
    #"${SRC_DIR}/GroundTruthRecords.cpp"
    "${SRC_DIR}/HaarCascadeDetector.cpp"
    #"${SRC_DIR}/HarrisKeypoints.cpp"
    #"${SRC_DIR}/HeightDepthImager.cpp"
    "${SRC_DIR}/Histogram.cpp"
    "${SRC_DIR}/Histogram1D.cpp"
    #"${SRC_DIR}/HoG.cpp"
    "${SRC_DIR}/HOGExtractor.cpp"
    "${SRC_DIR}/HoughCirclesOperator.cpp"
    "${SRC_DIR}/HoughLinesOperator.cpp"
    #"${SRC_DIR}/ImageBuilder.cpp"
    #"${SRC_DIR}/ImageComparator.cpp"
    "${SRC_DIR}/ImageHistogram.cpp"
    "${SRC_DIR}/ImageLabeller.cpp"
    #"${SRC_DIR}/ImageModifier   # Requires OpenCV nonfree library.cpp"
    "${SRC_DIR}/ImageProcess.cpp"
    "${SRC_DIR}/ImagePyramid.cpp"
    "${SRC_DIR}/ImageType.cpp"
    "${SRC_DIR}/IntensityIndexer.cpp"
    #"${SRC_DIR}/JpegDecompressor.cpp"
    "${SRC_DIR}/KeypointsConverter.cpp"
    "${SRC_DIR}/KeypointsDetector.cpp"
    "${SRC_DIR}/LaplacianZC.cpp"
    "${SRC_DIR}/LinesConverter.cpp"
    "${SRC_DIR}/LinesFilter.cpp"
    "${SRC_DIR}/LocalBinaryPattern.cpp"
    "${SRC_DIR}/LocalBinaryPatternExtractor.cpp"
    #"${SRC_DIR}/MserKeypoints.cpp"
    "${SRC_DIR}/NFoldCalculator.cpp"
    "${SRC_DIR}/OffsetPatchScanner.cpp"
    #"${SRC_DIR}/Panorama.cpp"
    "${SRC_DIR}/PatchDescriptor.cpp"
    "${SRC_DIR}/PatchDescriptorExtractor.cpp"
    #"${SRC_DIR}/PointCloud.cpp"
    #"${SRC_DIR}/PointCloud_impl.cpp"
    #"${SRC_DIR}/PointCloudBuilder.cpp"
    #"${SRC_DIR}/PointCloudOrienter.cpp"
    #"${SRC_DIR}/PointCloudReader.cpp"
    #"${SRC_DIR}/PointCloudTextReader.cpp"
    #"${SRC_DIR}/PointCloudWriter.cpp"
    #"${SRC_DIR}/PointCloudTextWriter.cpp"
    #"${SRC_DIR}/PointDataReader.cpp"
    #"${SRC_DIR}/PointDataWriter.cpp"
    #"${SRC_DIR}/PointCloudTools.cpp"
    "${SRC_DIR}/ProHOG.cpp"
    "${SRC_DIR}/ProHOGExtractor.cpp"
    "${SRC_DIR}/ProHOGTools.cpp"
    #"${SRC_DIR}/ProHOGFeatureExtractor.cpp"
    #"${SRC_DIR}/RangeImager.cpp"
    #"${SRC_DIR}/RangeMapAdjuster.cpp"
    "${SRC_DIR}/RangePatchScanner.cpp"
    "${SRC_DIR}/RectangleManager.cpp"
    "${SRC_DIR}/RectCluster.cpp"
    "${SRC_DIR}/RegionSorter.cpp"
    #"${SRC_DIR}/SLIC.cpp"
    "${SRC_DIR}/SobelEdges.cpp"
    "${SRC_DIR}/SobelEdgesExtractor.cpp"
    "${SRC_DIR}/SobelMaker.cpp"
    #"${SRC_DIR}/StarKeypoints.cpp"
    #"${SRC_DIR}/Superpixels.cpp"
    "${SRC_DIR}/VectorDistribution.cpp"
    #"${SRC_DIR}/VectorFloatKeyHashing.cpp"
    #"${SRC_DIR}/VertexBoundaries.cpp"
    #"${SRC_DIR}/View.cpp"
    #"${SRC_DIR}/ViewExtract.cpp"
    #"${SRC_DIR}/ViewFileReader.cpp"
    #"${SRC_DIR}/ViewFileWriter.cpp"
    #"${SRC_DIR}/ViewReader.cpp"
    #"${SRC_DIR}/ViewReceiver.cpp"
    #"${SRC_DIR}/ViewSampleExtractor.cpp"
    #"${SRC_DIR}/ViewWriter.cpp"
    "${SRC_DIR}/WatershedOperator.cpp"
    )

add_library( ${PROJECT_NAME} ${SRC_FILES} ${INCLUDE_FILES})
include( "cmake/LinkLibs.cmake")
